# browser_split_screen

./: .gitignore  BUILD.md  CMakeLists.txt  COOKIE_FIX_README.md  DEPLOYMENT.md  READEM.md  README.md  a.txt  browser_split_screen.db  build.sh
include/: BrowserWidget.h  DatabaseManager.h  LoginDialog.h  MainWindow.h  SubWindowManager.h  WindowManager.h
src/: BrowserWidget.cpp  DatabaseManager.cpp  LoginDialog.cpp  MainWindow.cpp  SubWindowManager.cpp  WindowManager.cpp  main.cpp
